2008-10-03  Martin Rudalics  <rudalics@gmx.at>

	* window.el (window--display-buffer-1): Don't care about
	visibility since raise-frame does.

2008-10-03  Mario Lang  <mlang@delysid.org>

	* nxml/xmltok.el (xmltok-forward): Simplify.

2008-10-03  Glenn Morris  <rgm@gnu.org>

	* Makefile.in (ELCFILES): Update.

	* frame.el (set-default-font): Make obsolete.
	* mouse.el (mouse-set-font): Use set-frame-font.

	* jka-cmpr-hook.el (jka-compr-compression-info-list)
	(jka-compr-mode-alist-additions): Also match `.tbz2'.

	* progmodes/idlwave.el (auto-mode-alist): Remove unnecessary autoload.
	* files.el (auto-mode-alist): Add .PRO as per above autoload.

2008-10-03  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc-dir.el (vc-dir-mode): Don't create the ewoc header here.
	(vc-dir-refresh): Set it here instead.  (Bug#1067)

2008-10-02  Chong Yidong  <cyd@stupidchicken.com>

	* faces.el (inhibit-frame-set-background-mode): New var.
	(frame-set-background-mode): Use it to avoid a loop in
	face-spec-recalc.

2008-10-02  Glenn Morris  <rgm@gnu.org>

	* vc-bzr.el (vc-bzr-diff): Use vc-switches rather than the obsolete
	vc-diff-switches.

2008-10-01  Vinicius Jose Latorre  <viniciusjl@ig.com.br>

	* whitespace.el: Eliminate whitespace-kill-buffer-hook functionality,
	that is, to take some action when a buffer is killed.  Suggested by
	Stefan Monnier <monnier@iro.umontreal.ca>.  Doc fix.  New version
	11.2.2.
	(whitespace-action): Docstring and :type fix.
	(whitespace-turn-on, whitespace-turn-off, whitespace-warn-read-only):
	Code fix.
	(whitespace-add-local-hook, whitespace-remove-local-hook)
	(whitespace-kill-buffer-hook, whitespace-action): Fun eliminated.

2008-10-01  Magnus Henoch  <mange@freemail.hu>

	* net/tls.el (open-tls-stream): Show the actual command being
	executed, instead of the format string.

2008-10-01  Eli Zaretskii  <eliz@gnu.org>

	* term/internal.el (dos-locale-alist): New alist.
	(dos-codepage-setup): Use it to compute a value of locale with